cmake_minimum_required(VERSION 3.10)
project(SuperStoner420)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
find_package(SDL2 REQUIRED)
find_library(SDL2_MIXER SDL2_mixer REQUIRED PATHS ${SDL_PATH}/lib)
include_directories(${SDL2_INCLUDE_DIRS})
file(GLOB C_FILES "${CMAKE_SOURCE_DIR}/*.c")
add_executable(SuperStoner420 ${C_FILES})
target_link_libraries(SuperStoner420 ${SDL2_LIBRARIES} ${SDL2_MIXER})
add_definitions(-DHAS_MIXER)
set_directory_properties(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES "SuperStoner420")
